--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body class="">
-    <!-- <div>
+<body class="overflow-hidden">
+    <div>
         <div id="preloader"
             class="min-vh-100 w-100 bg-white position-fixed start-0 top-0 d-flex align-items-center justify-content-center z_index_4 duration_300">
             <img src="./assets/images/png/logo.png" alt="logo" class="animation">
         </div>
-    </div> -->
+    </div>
     <!-- herosection -->
     <section>
         <div class="container">
