--- a/index.html
+++ b/index.html
@@ -64,25 +64,25 @@
                         <a class="text-black fs_18 fw-400 ff-roboto mb-0" onclick="openNav()" href="#home">HOME</a>
                     </li>
                     <li>
-                        <a class="text-black fs_18 fw-400 ff-roboto" href="">SNEAKERS KOPEN
+                        <a class="text-black fs_18 fw-400 ff-roboto" onclick="openNav()" href="">SNEAKERS KOPEN
                         </a>
                     </li>
                     <li>
-                        <a class="text-black fs_18 fw-400 ff-roboto" href="">INTERVIEWS</a>
+                        <a class="text-black fs_18 fw-400 ff-roboto" onclick="openNav()" href="">INTERVIEWS</a>
                     </li>
                     <li>
-                        <a class="text-black fs_18 fw-400 ff-roboto" href="">SALE
+                        <a class="text-black fs_18 fw-400 ff-roboto" onclick="openNav()" href="#sale">SALE
                         </a>
                     </li>
                     <li>
-                        <a class="text-black fs_18 ff-roboto fw-400" href="">SNEAKER VAN DE DAG</a>
+                        <a class="text-black fs_18 ff-roboto fw-400" onclick="openNav()" href="">SNEAKER VAN DE DAG</a>
                     </li>
                     <li>
-                        <a class="text-black fs_18 ff-roboto fw-400" href="">SNEAKER FORUM
+                        <a class="text-black fs_18 ff-roboto fw-400" onclick="openNav()" href="">SNEAKER FORUM
                         </a>
                     </li>
                     <li>
-                        <a class="text-black fs_18 ff-roboto fw-400" href="">BLOG</a>
+                        <a class="text-black fs_18 ff-roboto fw-400" onclick="openNav()" href="">BLOG</a>
                     </li>
                 </ul>
             </div>
@@ -532,7 +532,7 @@
         </div>
     </section>
     <!-- product -->
-    <section>
+    <section id="sale">
         <div class="container">
             <h2 class="fs_30 ff-poppins fw_600 text-black pb-3 pt-5">RELATED PRODUCT</h2>
             <div class="responsive">
@@ -1089,7 +1089,7 @@
                     </div>
                 </div>
             </div>
-            <div class="d-flex gap-2 justify-content-end mt-5 pt-4 mb-5 pb-5">
+            <div class="d-flex gap-2 justify-content-lg-end mt-5 pt-4 mb-5 pb-5">
                 <button class="fs_24 fw_600 lh_125 ff-poppins product_btn">1</button>
                 <button class="fs_24 fw_600 lh_125 ff-poppins product_btn">2</button>
                 <button class="fs_24 fw_600 lh_125 ff-poppins product_btn">3</button>
