png-convert-webp

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div>
         <div id="preloader"
             class="min-vh-100 w-100 bg-white position-fixed start-0 top-0 d-flex align-items-center justify-content-center z_index_4 duration_300">
-            <img src="./assets/images/png/logo.png" alt="logo" class="animation">
+            <img src="./assets/images/webp/logo.webp" alt="logo" class="animation">
         </div>
     </div>
     <!-- herosection -->
@@ -43,7 +43,7 @@
         <div class="container">
             <div class="row justify-content-between pt-3">
                 <div class="col-12 col-lg-3 d-flex justify-content-between">
-                    <img src="./assets/images/png/logo.png" alt="logo" class="w-100 h-100 mw-90">
+                    <img src="./assets/images/webp/logo.webp" alt="logo" class="w-100 h-100 mw-90">
                     <div id="menubtn-icon" onclick="openNav()"
                         class="d-lg-none d-flex align-items-center flex-column justify-content-center z_index_3">
                         <div class="line1"></div>
@@ -52,7 +52,7 @@
                     </div>
                 </div>
                 <div class="col-7 d-lg-block d-none">
-                    <img src="./assets/images/png/add-image.png" alt="add-image" class="w-100 h-100">
+                    <img src="./assets/images/webp/add-image.webp" alt="add-image" class="w-100 h-100">
                 </div>
             </div>
         </div>
@@ -90,23 +90,23 @@
         <div class="container">
             <div class="row pt-4 pt-5">
                 <div class="col-12 col-lg-6">
-                    <img src="./assets/images/png/shoes.png" alt="shoes" class="w-100 h-100 mw_624 mh_588">
+                    <img src="./assets/images/webp/shoes.webp" alt="shoes" class="w-100 h-100 mw_624 mh_588">
                     <div class="pt-4">
                         <div class="custum-slider">
                             <div class="px-12">
-                                <img src="./assets/images/png/BlackShoes.png" alt="BlackShoes"
+                                <img src="./assets/images/webp/BlackShoes.webp" alt="BlackShoes"
                                     class="w-100 h-100 mw_137 rounded-1">
                             </div>
                             <div class="px-12">
-                                <img src="./assets/images/png/RedShoes.png" alt="RedShoes"
+                                <img src="./assets/images/webp/RedShoes.webp" alt="RedShoes"
                                     class="w-100 h-100 mw_137 rounded-1">
                             </div>
                             <div class="px-12">
-                                <img src="./assets/images/png/GrayShoes.png" alt="GrayShoes"
+                                <img src="./assets/images/webp/GrayShoes.webp" alt="GrayShoes"
                                     class="w-100 h-100 mw_137 rounded-1">
                             </div>
                             <div class="px-12">
-                                <img src="./assets/images/png/RedblackShoes.png" alt="RedblackShoes"
+                                <img src="./assets/images/webp/RedblackShoes.webp" alt="RedblackShoes"
                                     class="w-100 h-100 mw_137 rounded-1">
                             </div>
                         </div>
@@ -311,7 +311,7 @@
                 <div class="px-12">
                     <div class="card_box">
                         <div class="box_img">
-                            <img src="./assets/images/png/FootLocker.png" alt="FootLocker" class="bradius_10 w-100">
+                            <img src="./assets/images/webp/FootLocker.webp" alt="FootLocker" class="bradius_10 w-100">
                         </div>
                         <div class="box_text">
                             <div class="d-flex justify-content-between">
@@ -342,7 +342,7 @@
                 <div class="px-12">
                     <div class="card_box">
                         <div class="box_img">
-                            <img src="./assets/images/png/sidestep-img.png" alt="sidestep-img" class="bradius_10 w-100">
+                            <img src="./assets/images/webp/sidestep-img.webp" alt="sidestep-img" class="bradius_10 w-100">
                         </div>
                         <div class="box_text">
                             <div class="d-flex justify-content-between">
@@ -373,7 +373,7 @@
                 <div class="px-12">
                     <div class="card_box">
                         <div class="box_img">
-                            <img src="./assets/images/png/FootLocker.png" alt="FootLocker" class="w-100 bradius_10">
+                            <img src="./assets/images/webp/FootLocker.webp" alt="FootLocker" class="w-100 bradius_10">
                         </div>
                         <div class="box_text">
                             <div class="d-flex justify-content-between">
@@ -404,7 +404,7 @@
                 <div class="px-12">
                     <div class="card_box">
                         <div class="box_img">
-                            <img src="./assets/images/png/sidestep-img.png" alt="sidestep-img" class="w-100 bradius_10">
+                            <img src="./assets/images/webp/sidestep-img.webp" alt="sidestep-img" class="w-100 bradius_10">
                         </div>
                         <div class="box_text">
                             <div class="d-flex justify-content-between">
@@ -435,7 +435,7 @@
                 <div class="px-12">
                     <div class="card_box mb_24">
                         <div class="box_img">
-                            <img src="./assets/images/png/FootLocker.png" alt="FootLocker" class="w-100 bradius_10">
+                            <img src="./assets/images/webp/FootLocker.webp" alt="FootLocker" class="w-100 bradius_10">
                         </div>
                         <div class="box_text">
                             <div class="d-flex justify-content-between">
@@ -539,10 +539,10 @@
                 <div class="px-12">
                     <div class="sale-card">
                         <div class="position-relative">
-                            <img src="./assets/images/png/new-img.png" alt="new-img" class="position-absolute end-0">
-                            <img src="./assets/images/png/discount-img.png" alt="discount-img"
+                            <img src="./assets/images/webp/new-img.webp" alt="new-img" class="position-absolute end-0">
+                            <img src="./assets/images/webp/discount-img.webp" alt="discount-img"
                                 class="position-absolute dis_img">
-                            <img src="./assets/images/png/slider-img1.png" alt="slider-img1"
+                            <img src="./assets/images/webp/slider-img1.webp" alt="slider-img1"
                                 class="border-radius-17 w-100">
                         </div>
                         <div class="d-flex card_text gap-4 justify-content-between">
@@ -594,10 +594,10 @@
                 <div class="px-12">
                     <div class="sale-card">
                         <div class="position-relative">
-                            <img src="./assets/images/png/new-img.png" alt="new-img" class="position-absolute end-0">
-                            <img src="./assets/images/png/discount-img.png" alt="discount-img"
+                            <img src="./assets/images/webp/new-img.webp" alt="new-img" class="position-absolute end-0">
+                            <img src="./assets/images/webp/discount-img.webp" alt="discount-img"
                                 class="position-absolute dis_img">
-                            <img src="./assets/images/png/slider-img2.png" alt="slider-img2"
+                            <img src="./assets/images/webp/slider-img2.webp" alt="slider-img2"
                                 class="border-radius-17 w-100">
                         </div>
                         <div class="d-flex card_text gap-4 justify-content-between">
@@ -649,10 +649,10 @@
                 <div class="px-12">
                     <div class="sale-card">
                         <div class="position-relative">
-                            <img src="./assets/images/png/new-img.png" alt="new-img" class="position-absolute end-0">
-                            <img src="./assets/images/png/discount-img.png" alt="discount-img"
+                            <img src="./assets/images/webp/new-img.webp" alt="new-img" class="position-absolute end-0">
+                            <img src="./assets/images/webp/discount-img.webp" alt="discount-img"
                                 class="position-absolute dis_img">
-                            <img src="./assets/images/png/slider-img1.png" alt="slider-img1"
+                            <img src="./assets/images/webp/slider-img1.webp" alt="slider-img1"
                                 class="border-radius-17 w-100">
                         </div>
                         <div class="d-flex card_text gap-4 justify-content-between">
@@ -704,10 +704,10 @@
                 <div class="px-12">
                     <div class="sale-card">
                         <div class="position-relative">
-                            <img src="./assets/images/png/new-img.png" alt="new-img" class="position-absolute end-0">
-                            <img src="./assets/images/png/discount-img.png" alt="discount-img"
+                            <img src="./assets/images/webp/new-img.webp" alt="new-img" class="position-absolute end-0">
+                            <img src="./assets/images/webp/discount-img.webp" alt="discount-img"
                                 class="position-absolute dis_img">
-                            <img src="./assets/images/png/slider-img2.png" alt="slider-img2"
+                            <img src="./assets/images/webp/slider-img2.webp" alt="slider-img2"
                                 class="border-radius-17 w-100">
                         </div>
                         <div class="d-flex card_text gap-4 justify-content-between">
@@ -759,10 +759,10 @@
                 <div class="px-12">
                     <div class="sale-card">
                         <div class="position-relative">
-                            <img src="./assets/images/png/new-img.png" alt="new-img" class="position-absolute end-0">
-                            <img src="./assets/images/png/discount-img.png" alt="discount-img"
+                            <img src="./assets/images/webp/new-img.webp" alt="new-img" class="position-absolute end-0">
+                            <img src="./assets/images/webp/discount-img.webp" alt="discount-img"
                                 class="position-absolute dis_img">
-                            <img src="./assets/images/png/slider-img1.png" alt="slider-img1"
+                            <img src="./assets/images/webp/slider-img1.webp" alt="slider-img1"
                                 class="border-radius-17 w-100">
                         </div>
                         <div class="d-flex card_text gap-4 justify-content-between">
@@ -816,10 +816,10 @@
                 <div class="px-12">
                     <div class="sale-card">
                         <div class="position-relative">
-                            <img src="./assets/images/png/new-img.png" alt="new-img" class="position-absolute end-0">
-                            <img src="./assets/images/png/discount-img.png" alt="discount-img"
+                            <img src="./assets/images/webp/new-img.webp" alt="new-img" class="position-absolute end-0">
+                            <img src="./assets/images/webp/discount-img.webp" alt="discount-img"
                                 class="position-absolute dis_img">
-                            <img src="./assets/images/png/slider-img1.png" alt="slider-img1"
+                            <img src="./assets/images/webp/slider-img1.webp" alt="slider-img1"
                                 class="border-radius-17 w-100">
                         </div>
                         <div class="d-flex card_text gap-4 justify-content-between">
@@ -871,10 +871,10 @@
                 <div class="px-12">
                     <div class="sale-card">
                         <div class="position-relative">
-                            <img src="./assets/images/png/new-img.png" alt="new-img" class="position-absolute end-0">
-                            <img src="./assets/images/png/discount-img.png" alt="discount-img"
+                            <img src="./assets/images/webp/new-img.webp" alt="new-img" class="position-absolute end-0">
+                            <img src="./assets/images/webp/discount-img.webp" alt="discount-img"
                                 class="position-absolute dis_img">
-                            <img src="./assets/images/png/slider-img2.png" alt="slider-img2"
+                            <img src="./assets/images/webp/slider-img2.webp" alt="slider-img2"
                                 class="border-radius-17 w-100">
                         </div>
                         <div class="d-flex card_text gap-4 justify-content-between">
@@ -926,10 +926,10 @@
                 <div class="px-12">
                     <div class="sale-card">
                         <div class="position-relative">
-                            <img src="./assets/images/png/new-img.png" alt="new-img" class="position-absolute end-0">
-                            <img src="./assets/images/png/discount-img.png" alt="discount-img"
+                            <img src="./assets/images/webp/new-img.webp" alt="new-img" class="position-absolute end-0">
+                            <img src="./assets/images/webp/discount-img.webp" alt="discount-img"
                                 class="position-absolute dis_img">
-                            <img src="./assets/images/png/slider-img1.png" alt="slider-img1"
+                            <img src="./assets/images/webp/slider-img1.webp" alt="slider-img1"
                                 class="border-radius-17 w-100">
                         </div>
                         <div class="d-flex card_text gap-4 justify-content-between">
@@ -981,10 +981,10 @@
                 <div class="px-12">
                     <div class="sale-card">
                         <div class="position-relative">
-                            <img src="./assets/images/png/new-img.png" alt="new-img" class="position-absolute end-0">
-                            <img src="./assets/images/png/discount-img.png" alt="discount-img"
+                            <img src="./assets/images/webp/new-img.webp" alt="new-img" class="position-absolute end-0">
+                            <img src="./assets/images/webp/discount-img.webp" alt="discount-img"
                                 class="position-absolute dis_img">
-                            <img src="./assets/images/png/slider-img2.png" alt="slider-img2"
+                            <img src="./assets/images/webp/slider-img2.webp" alt="slider-img2"
                                 class="border-radius-17 w-100">
                         </div>
                         <div class="d-flex card_text gap-4 justify-content-between">
@@ -1036,10 +1036,10 @@
                 <div class="px-12">
                     <div class="sale-card">
                         <div class="position-relative">
-                            <img src="./assets/images/png/new-img.png" alt="new-img" class="position-absolute end-0">
-                            <img src="./assets/images/png/discount-img.png" alt="discount-img"
+                            <img src="./assets/images/webp/new-img.webp" alt="new-img" class="position-absolute end-0">
+                            <img src="./assets/images/webp/discount-img.webp" alt="discount-img"
                                 class="position-absolute dis_img">
-                            <img src="./assets/images/png/slider-img1.png" alt="slider-img1"
+                            <img src="./assets/images/webp/slider-img1.webp" alt="slider-img1"
                                 class="border-radius-17 w-100">
                         </div>
                         <div class="d-flex card_text gap-4 justify-content-between">
@@ -1100,7 +1100,7 @@
     <!-- footer -->
     <section class="bg_black">
         <div class="container">
-            <img src="./assets/images/png/Pagelogoo.png" alt="/Pagelogoo" class="w-100 h-100 pt-4 mw_90">
+            <img src="./assets/images/webp/Pagelogoo.webp" alt="/Pagelogoo" class="w-100 h-100 pt-4 mw_90">
             <div class="row">
                 <div class="col-12 col-lg-4 pb-5 pb-lg-0">
                     <p class="ff-poppins fs_16 fw_400 lh_185 mb-0 pb-4 text-lightblack mw_448">Sed nec ultricies felis,
