--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                                 <button
                                     class="ff-josefin qty_btn fs_20 fw_400 black_clrpalat lh_125 ps-3 counter-add">+</button>
                             </div>
-                            <a class="button fs_20 fw_500 ff-poppins text-nowrap text-white ms-3 lh_125" href="">Add to
+                            <a class="button fs_20 fw_500 ff-poppins text-nowrap ms-3 lh_125" href="">Add to
                                 Cart</a>
                         </div>
                         <div class="d-flex align-items-center mb_21">
