--- a/index.html
+++ b/index.html
@@ -812,7 +812,7 @@
                     </div>
                 </div>
             </div>
-            <div class="responsive mt-3">
+            <div class="slick_slider mt-3">
                 <div class="px-12">
                     <div class="sale-card">
                         <div class="position-relative">
