--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
                     </div>
                 </div>
                 <div class="col-7 d-lg-block d-none">
-                    <img src="./assets/images/webp/add-image.webp" alt="add-image" class="w-100 h-100">
+                    <a href="">
+                        <img src="./assets/images/webp/add-image.webp" alt="add-image" class="w-100 h-100">
+                    </a>
                 </div>
             </div>
         </div>
@@ -342,7 +344,8 @@
                 <div class="px-12">
                     <div class="card_box">
                         <div class="box_img">
-                            <img src="./assets/images/webp/sidestep-img.webp" alt="sidestep-img" class="bradius_10 w-100">
+                            <img src="./assets/images/webp/sidestep-img.webp" alt="sidestep-img"
+                                class="bradius_10 w-100">
                         </div>
                         <div class="box_text">
                             <div class="d-flex justify-content-between">
@@ -404,7 +407,8 @@
                 <div class="px-12">
                     <div class="card_box">
                         <div class="box_img">
-                            <img src="./assets/images/webp/sidestep-img.webp" alt="sidestep-img" class="w-100 bradius_10">
+                            <img src="./assets/images/webp/sidestep-img.webp" alt="sidestep-img"
+                                class="w-100 bradius_10">
                         </div>
                         <div class="box_text">
                             <div class="d-flex justify-content-between">
@@ -1190,7 +1194,7 @@
         </div>
     </div>
 
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
