--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
                         role="tab" aria-controls="pills-profile" aria-selected="false">ADDITIONAL INFORMATION</button>
                 </li>
                 <li class="nav-item" role="presentation">
-                    <button class="nav-link ff-poppins text-black fs_20 fw_400 lh_125 mb-3 mb-sm-0 mt-2 mt-lg-0"
+                    <button class="nav-link ff-poppins text-black fs_20 fw_400 lh_125 mb-3 mb-sm-0 mt-2 mt-md-0"
                         id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button"
                         role="tab" aria-controls="pills-contact" aria-selected="false">REVIEWS (1)</button>
                 </li>
