--- a/index.html
+++ b/index.html
@@ -1159,7 +1159,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="d-flex gap-2 justify-content-lg-end mt-5 pt-4 mb-5 pb-5">
+                <div class="d-flex gap-2 justify-content-lg-end align-items-center mt-5 pt-4 mb-5 pb-5">
                     <button class="fs_24 fw_600 lh_125 ff-poppins product_btn">1</button>
                     <button class="fs_24 fw_600 lh_125 ff-poppins product_btn">2</button>
                     <button class="fs_24 fw_600 lh_125 ff-poppins product_btn">3</button>
