decrease footer link font size

--- a/index.html
+++ b/index.html
@@ -1208,11 +1208,11 @@
                         <div class="row pb-5 mb-4">
                             <div class="col-6 col-lg-3 pb-4 pb-lg-0">
                                 <ul>
-                                    <li class="fs_18 fw_600 ff-poppins lh_150 text-white pb-24">CUSTOM LINKS</li>
-                                    <li><a class="fs_18 ff-poppins fw_400 lh_150 footer_link position-relative text-lightblack"
+                                    <li class="fs_18 fw_600 ff-poppins lh_150 text-nowrap text-white pb-24">CUSTOM LINKS</li>
+                                    <li><a class="fs_18 ff-poppins text-nowrap fw_400 lh_150 footer_link position-relative text-lightblack"
                                             href="">Lorem ipsum</a>
                                     </li>
-                                    <li><a class="fs_18 pt-3 d-inline-block footer_link position-relative ff-poppins fw_400 lh_150 text-lightblack"
+                                    <li><a class="fs_18 pt-3 d-inline-block text-nowrap footer_link position-relative ff-poppins fw_400 lh_150 text-lightblack"
                                             href="">Lorem ipsum</a>
                                     </li>
                                 </ul>
@@ -1220,36 +1220,36 @@
                             <div class="col-6 col-lg-3 pb-4 pb-lg-0">
                                 <ul>
                                     <li class="fs_18 fw_600 pb-24 ff-poppins lh_150 text-white pb-24">PRODUCTS</li>
-                                    <li><a class="fs_18 ff-poppins fw_400 lh_150 text-lightblack footer_link position-relative"
+                                    <li><a class="fs_18 text-nowrap ff-poppins fw_400 lh_150 text-lightblack footer_link position-relative"
                                             href="">Lorem ipsum</a>
                                     </li>
-                                    <li><a class="fs_18 pt-3 pb-3 d-inline-block ff-poppins fw_400 footer_link position-relative lh_150 text-lightblack"
+                                    <li><a class="fs_18 text-nowrap pt-3 d-inline-block ff-poppins fw_400 footer_link position-relative lh_150 text-lightblack"
                                             href="">Lorem
                                             ipsum</a>
                                     </li>
-                                    <li><a class="fs_18 ff-poppins fw_400 lh_150 text-lightblack footer_link position-relative"
+                                    <li><a class="fs_18 text-nowrap ff-poppins pt-3 d-inline-block fw_400 lh_150 text-lightblack footer_link position-relative"
                                             href="">Lorem ipsum</a>
                                     </li>
                                 </ul>
                             </div>
                             <div class="col-6 col-lg-3">
                                 <ul>
-                                    <li class="fs_18 fw_600 pb-24 ff-poppins lh_150 text-white pb-24">OUR COMPANY</li>
-                                    <li><a class="fs_18 ff-poppins fw_400 lh_150 text-lightblack footer_link position-relative"
+                                    <li class="fs_18 fw_600 text-nowrap pb-24 ff-poppins lh_150 text-white pb-24">OUR COMPANY</li>
+                                    <li><a class="fs_18 text-nowrap ff-poppins fw_400 lh_150 text-lightblack footer_link position-relative"
                                             href="">Lorem ipsum</a>
                                     </li>
-                                    <li><a class="fs_18 pt-3 d-inline-block ff-poppins footer_link position-relative fw_400 lh_150 text-lightblack"
+                                    <li><a class="fs_18 text-nowrap pt-3 d-inline-block ff-poppins footer_link position-relative fw_400 lh_150 text-lightblack"
                                             href="">Lorem ipsum</a>
                                     </li>
                                 </ul>
                             </div>
                             <div class="col-6 col-lg-3">
                                 <ul>
-                                    <li class="fs_18 fw_600 pb-24 ff-poppins lh_150 text-white pb-24">YOUR ACCOUNT</li>
-                                    <li><a class="fs_18 ff-poppins fw_400 lh_150 text-lightblack footer_link position-relative"
+                                    <li class="fs_18 fw_600 pb-24 ff-poppins lh_150 text-white pb-24 text-nowrap">YOUR ACCOUNT</li>
+                                    <li><a class="fs_18 text-nowrap ff-poppins fw_400 lh_150 text-lightblack footer_link position-relative"
                                             href="">Lorem ipsum</a>
                                     </li>
-                                    <li><a class="fs_18 pt-3 d-inline-block footer_link position-relative ff-poppins fw_400 lh_150 text-lightblack"
+                                    <li><a class="fs_18 text-nowrap pt-3 d-inline-block footer_link position-relative ff-poppins fw_400 lh_150 text-lightblack"
                                             href="">Lorem ipsum</a>
                                     </li>
                                 </ul>
