--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
                         </div>
                     </div>
                     <div
-                        class="col-12 col-lg-6 d-flex flex-column align-items-center justify-content-center pt-md-5 pt_140">
-                        <div>
+                        class="col-12 col-lg-6 d-flex flex-column align-items-center justify-content-center pt_140 pt-lg-0">
+                        <div class="pt-5 pt-lg-0">
                             <h2 class="fs_30 ff-poppins fw_600 lh-1 text-black">
                                 PREMIUM MENS SPORTS LATHER KEDS
                             </h2>
@@ -306,8 +306,8 @@
             </div>
         </section>
         <section>
-            <div class="container">
-                <h2 class="fs_25 fw_500 text-black lh_125 ff-poppins mb-0 pb-5 pt-5 pt-4">You can buy the Nike Air Max
+            <div class="container mt-5 mt-xl-0">
+                <h2 class="fs_25 fw_500 text-black lh_125 ff-poppins mb-0 pb-5 d-inline-block mt-5 pt-4">You can buy the Nike Air Max
                     97
                     Men's Shoe -
                     White
