--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
             <div class="container">
                 <div class="row justify-content-between pt-3">
                     <div class="col-12 col-lg-3 d-flex justify-content-between">
-                        <img src="./assets/images/webp/logo.webp" alt="logo" class="w-100 h-100 mw-90">
+                        <a href="">
+                            <img src="./assets/images/webp/logo.webp" alt="logo" class="w-100 h-100 mw-90">
+                        </a>
                         <div id="menubtn-icon" onclick="openNav()"
                             class="d-lg-none d-flex align-items-center flex-column justify-content-center z_index_3">
                             <div class="line1"></div>
@@ -53,9 +55,7 @@
                         </div>
                     </div>
                     <div class="col-7 d-lg-block d-none">
-                        <a href="">
-                            <img src="./assets/images/webp/add-image.webp" alt="add-image" class="w-100 h-100">
-                        </a>
+                        <img src="./assets/images/webp/add-image.webp" alt="add-image" class="w-100 h-100">
                     </div>
                 </div>
             </div>
@@ -307,7 +307,8 @@
         </section>
         <section>
             <div class="container mt-5 mt-xl-0">
-                <h2 class="fs_25 fw_500 text-black lh_125 ff-poppins mb-0 pb-5 d-inline-block mt-5 pt-4">You can buy the Nike Air Max
+                <h2 class="fs_25 fw_500 text-black lh_125 ff-poppins mb-0 pb-5 d-inline-block mt-5 pt-4">You can buy the
+                    Nike Air Max
                     97
                     Men's Shoe -
                     White
@@ -1208,7 +1209,8 @@
                         <div class="row pb-5 mb-4">
                             <div class="col-6 col-lg-3 pb-4 pb-lg-0">
                                 <ul>
-                                    <li class="fs_18 fw_600 ff-poppins lh_150 text-nowrap text-white pb-24">CUSTOM LINKS</li>
+                                    <li class="fs_18 fw_600 ff-poppins lh_150 text-nowrap text-white pb-24">CUSTOM LINKS
+                                    </li>
                                     <li><a class="fs_18 ff-poppins text-nowrap fw_400 lh_150 footer_link position-relative text-lightblack"
                                             href="">Lorem ipsum</a>
                                     </li>
@@ -1234,7 +1236,8 @@
                             </div>
                             <div class="col-6 col-lg-3">
                                 <ul>
-                                    <li class="fs_18 fw_600 text-nowrap pb-24 ff-poppins lh_150 text-white pb-24">OUR COMPANY</li>
+                                    <li class="fs_18 fw_600 text-nowrap pb-24 ff-poppins lh_150 text-white pb-24">OUR
+                                        COMPANY</li>
                                     <li><a class="fs_18 text-nowrap ff-poppins fw_400 lh_150 text-lightblack footer_link position-relative"
                                             href="">Lorem ipsum</a>
                                     </li>
@@ -1245,7 +1248,8 @@
                             </div>
                             <div class="col-6 col-lg-3">
                                 <ul>
-                                    <li class="fs_18 fw_600 pb-24 ff-poppins lh_150 text-white pb-24 text-nowrap">YOUR ACCOUNT</li>
+                                    <li class="fs_18 fw_600 pb-24 ff-poppins lh_150 text-white pb-24 text-nowrap">YOUR
+                                        ACCOUNT</li>
                                     <li><a class="fs_18 text-nowrap ff-poppins fw_400 lh_150 text-lightblack footer_link position-relative"
                                             href="">Lorem ipsum</a>
                                     </li>
