--- a/index.html
+++ b/index.html
@@ -67,26 +67,26 @@
                             <a class="text-black fs_18 fw-400 ff-roboto mb-0" onclick="openNav()" href="#home">HOME</a>
                         </li>
                         <li>
-                            <a class="text-black fs_18 fw-400 ff-roboto" onclick="openNav()" href="">SNEAKERS KOPEN
+                            <a class="text-black fs_18 fw-400 ff-roboto" onclick="openNav()" href="#SNEAKERS-KOPEN">SNEAKERS KOPEN
                             </a>
                         </li>
                         <li>
-                            <a class="text-black fs_18 fw-400 ff-roboto" onclick="openNav()" href="">INTERVIEWS</a>
+                            <a class="text-black fs_18 fw-400 ff-roboto" onclick="openNav()" href="#INTERVIEWS">INTERVIEWS</a>
                         </li>
                         <li>
                             <a class="text-black fs_18 fw-400 ff-roboto" onclick="openNav()" href="#sale">SALE
                             </a>
                         </li>
                         <li>
-                            <a class="text-black fs_18 ff-roboto fw-400" onclick="openNav()" href="">SNEAKER VAN DE
+                            <a class="text-black fs_18 ff-roboto fw-400" onclick="openNav()" href="#SNEAKER-VAN-DE-DAG">SNEAKER VAN DE
                                 DAG</a>
                         </li>
                         <li>
-                            <a class="text-black fs_18 ff-roboto fw-400" onclick="openNav()" href="">SNEAKER FORUM
+                            <a class="text-black fs_18 ff-roboto fw-400" onclick="openNav()" href="#SNEAKER-FORUM">SNEAKER FORUM
                             </a>
                         </li>
                         <li>
-                            <a class="text-black fs_18 ff-roboto fw-400" onclick="openNav()" href="">BLOG</a>
+                            <a class="text-black fs_18 ff-roboto fw-400" onclick="openNav()" href="#BLOG">BLOG</a>
                         </li>
                     </ul>
                 </div>
@@ -305,7 +305,7 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section class="SNEAKERS-KOPEN">
             <div class="container mt-5 mt-xl-0">
                 <h2 class="fs_25 fw_500 text-black lh_125 ff-poppins mb-0 pb-5 d-inline-block mt-xl-5 pt-4 pt-xl-5">You can buy the
                     Nike Air Max
@@ -517,7 +517,7 @@
                 </div>
             </div>
         </section>
-        <section class="pt-5">
+        <section id="INTERVIEWS" class="pt-5">
             <div class="container">
                 <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
                     <li class="nav-item" role="presentation">
