--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                 </div>
             </div>
         </section>
-        <section class="SNEAKERS-KOPEN">
+        <section id="SNEAKERS-KOPEN">
             <div class="container mt-5 mt-xl-0">
                 <h2 class="fs_25 fw_500 text-black lh_125 ff-poppins mb-0 pb-5 d-inline-block mt-xl-5 pt-4 pt-xl-5">You can buy the
                     Nike Air Max
