--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
                         <div class="sale-card">
                             <div class="position-relative">
                                 <img src="./assets/images/webp/new-img.webp" alt="new-img"
-                                    class="position-absolute end-0">
+                                    class="position-absolute top_3 end-0">
                                 <img src="./assets/images/webp/discount-img.webp" alt="discount-img"
                                     class="position-absolute dis_img">
                                 <img src="./assets/images/webp/slider-img1.webp" alt="slider-img1"
